<resources>
    <string name="app_name">OWLY</string>
    <string name="tagline">sleep equality for all</string>
    <string name="login_btn">Login</string>
    <string name="account_btn">My Account</string>
    <string name="register_btn">Register</string>
    <string name="set_circle">New Sleep Circle</string>
    <string name="sleep_circles_btn">Sleep Circles</string>
    <string name="new_sleep_session">New Sleep Session</string>
    <string name="sleep_sessions">Sleep Sessions</string>
    <string name="new_user">Add a User</string>
    <string name="users_btn">Users</string>
    <string name="new_user_btn">New User</string>
    <string name="add_user_btn">Add User</string>
    <string name="enter_name">Enter a username</string>
    <string name="info">User\'s info</string>
    <string name="choose_device">Choose an available device:</string>

    <!-- Test -->
    <array name="genres">
        <item>Rock</item>
        <item>Pop</item>
        <item>Folk</item>
    </array>
    <!-- Test -->


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Not a member?</string>
    <string name="sign_in">Log  In</string>
    <string name="password">Password</string>
    <string name="email_registration">Email Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_out">Sign-out</string>

    <!-- test vlc -->
    <string name="app_name2">VLC Simple Player</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Stream this movie</string>
    <string name="instruction">Here enter the URL of a movie file :</string>
    <string name="default_url">http://distribution.bbb3d.renderfarming.net/video/mp4/bbb_sunflower_1080p_30fps_normal.mp4</string>
    <string name="title_activity_fullscreen_vlc_player">FullscreenVlcPlayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Sleep Circle -->
    <string name="create_sleep_cicrle">Create Sleep Circle</string>
    <string name="add_monitor">Add a baby monitor</string>
    <string name="add_monitor_warning">You can only add this device as a monitor if you are not using it to pair your earbuds</string>
    <string name="turn_into_monitor">Use as a Monitor</string>
    <string name="name_circle">Name your Circle</string>
    <string name="second_user">Second user:</string>
    <string name="make_monitor">Make this device the monitor</string>


    <!-- Sleep Session -->
    <string name="start_sleep">Start Sleep Session</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="info_sleep_session">To start a sleep session, select a sleep circle for which the current device is registered as a monitor.</string>


    <!-- Monitor -->
    <string name="prompt_monitor_name">Enter a name for this device</string>
    <string name="end_session">End Sleep Session</string>
    <string name="end_alert">End Alert</string>
    <string name="snooze">Snooze</string>

    <!-- New Session Alert -->
    <string name="new_session_alert">A new session just started.</string>
    <string name="ignore">Ignore</string>
    <string name="join">Join</string>


    <!-- Bluetooth -->
    <string name="search_devices">Search for devices</string>
    <string name="turn_on">Turn your audio device on to make it findable.</string>
    <string name="respond_alert">On it!</string>
    <string name="alert_button_info">Check the monitor device to end the alert.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
