<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.owl.sleepCircle.AddSleepCircleActivity">

    <EditText
        android:id="@+id/editCircleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_circle"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_user" />

    <EditText
        android:id="@+id/second_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="25dp" />

    <CheckBox
        android:id="@+id/make_monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_monitor" />


    <Button
        android:id="@+id/confirm_create_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_sleep_cicrle"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="98dp" />

</android.widget.LinearLayout>
