<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_sound_detector"
    tools:context="com.app.owl.soundDetector.SoundDetectorActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/end_session_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_session" />

    <Button
        android:id="@+id/end_alert_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_alert" />

    <TextView
        android:id="@+id/snooze_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/time_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/snooze_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snooze" />

    <Spinner
        android:id="@+id/snooze_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</android.widget.LinearLayout>
